<resources>
    <string name="app_name">rides</string>
    <string name="strOk">Ok</string>
    <string name="strOr">Or</string>
    <string name="strCancel">Cancel</string>
    <string name="strYes">Yes</string>
    <string name="strNo">No</string>
    <string name="strPleaseWait">Please wait…</string>
    <string name="strDismiss">Dismiss</string>
    <string name="strNoRecordFound">No record found</string>
    <string name="strPermissionRequired">you should allow the permission</string>v
    <string name="errorMsgNoInternet">Internet connection is unavailable</string>
    <string name="error_msg_server">There appears to be a problem with the request.  Please try again.</string>
    <string name="txtLoading">Loading...</string>
    <string name="strVehicleMake">Makes and Model:</string>
    <string name="strVin">VIN:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str">Vehicle name and model</string>
    <string name="strSpec">Specification</string>
    <string name="strColor">Color</string>
    <string name="strCarType">Car Type</string>
    <string name="strEnterValidNumber">Enter number above, between 1 to 100</string>
    <string name="strSubmit">Submit</string>
    <string name="strSelectedItemInfo">selected</string>
    <string name="strNumber">number between 1 to 100</string>
    <string name="strKilometrage">kilometrage</string>
    <string name="strEmission">Emission</string>
    <string name="strNote">Kilometerag counted as per below formula \
    for, first 5000 km, emission is 1 unit per kelometer, \
        for, after 5000km, emission is 1.5 unit per kelometer
    </string>

</resources>