<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.VehicleDetailsFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_car_photo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp"
                    android:background="@mipmap/ic_launcher_round"
                    android:onClick="onClickEvent" />


            </LinearLayout>

            <TextView
                android:id="@+id/txt_vehicle_make"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/strVehicleMake"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_vin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/strVin"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:background="@color/border" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/strSpec"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/strColor"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strCarType"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_carType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/strCarType"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strKilometrage" />

                <TextView
                    android:id="@+id/txt_kmrag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strEmission" />

                <TextView
                    android:id="@+id/txt_emission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strNote"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>